<resources>
    <string name="app_name">Vinilos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_desc">Logo vinilos</string>
    <string name="title_albums">Albums</string>
    <string name="add_album">Agregar Album</string>
    <string name="add_collector">Agregar Coleccionista</string>
    <string name="detail_album">Detalle Album</string>
    <string name="menu_album">Álbumes</string>
...
