<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/createAlbum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <ScrollView
        android:id="@+id/scrollCreateAlbum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/crearAlbum"
            android:textColor="@color/dark_green"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nombre"
            android:textColor="@color/dark_green"
            android:labelFor="@id/nombreAlbum"/>

        <EditText
            android:id="@+id/nombreAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textCapSentences"
            android:importantForAutofill="no"
            android:background="@drawable/background_formulario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/fecha_lanzamiento"
            android:textColor="@color/dark_green"
            android:labelFor="@id/fechaLanzamiento"/>

        <EditText
            android:id="@+id/fechaLanzamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="date"
            android:importantForAutofill="no"
            android:background="@drawable/background_formulario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/descripcion"
            android:textColor="@color/dark_green"
            android:labelFor="@id/descripcion"/>

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textLongMessage"
            android:importantForAutofill="no"
            android:background="@drawable/background_formulario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/genero"
            android:textColor="@color/dark_green"
            android:labelFor="@id/spinnerGenre"/>

        <Spinner
            android:id="@+id/spinnerGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_spinner"
            android:textColor="@color/dark_green"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/discografia"
            android:textColor="@color/dark_green"
            android:labelFor="@id/spinnerRecordLabel"/>

        <Spinner
            android:id="@+id/spinnerRecordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_spinner"
            android:textColor="@color/dark_green"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/portada"
            android:textColor="@color/dark_green"
            android:labelFor="@id/cover"/>

        <EditText
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_formulario"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textColor="@color/dark_green"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/crearAlbum"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>